--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-openpyxl>=3.0.0
-gensim>=4.0.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-wordcloud>=1.8.0
-bertopic>=0.15.0
-sentence-transformers>=2.0.0
-transformers>=4.20.0
-torch>=1.10.0
-umap-learn>=0.5.0
-hdbscan>=0.8.0
-plotly>=5.0.0
-tqdm>=4.60.0
 pandas~=2.3.0
+numpy~=1.26.4
+gensim~=4.3.3
+matplotlib~=3.10.3
+plotly~=6.1.2
+wordcloud~=1.9.4
+tqdm~=4.67.1
 streamlit~=1.45.1
 beautifulsoup4~=4.13.4
